--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,9 @@
 <div classname="content">
     <h1>Task Master</h1>
 
+    {% if tasks|length < 1 %}
+    <h3>There are no tasks. Create one.</h3>
+    {% else %}
     <table>
         <tr>
             <th>Task</th>
@@ -22,12 +25,13 @@
             <td>{{ task.content }}</td>
             <td>{{ task.date_created.date()}}</td>
             <td>
-                <a href="">Delete</a><br>
-                <a href="">Update</a><br>
+                <a href="/delete/{{task.id}}">Delete</a><br>
+                <a href="/update/{{task.id}}">Update</a><br>
             </td>
         </tr>
         {% endfor %}
     </table>
+    {% endif %}
 
     <form action="/" method="POST">
         <input type="text" name="content">
